css/style.css
body {
	--white: rgba(255, 255, 255, 1);
	--light-gray: rgba(255, 255, 255, 0.85);
	--medium-gray: rgba(255, 255, 255, 0.5);
	--dark-gray: rgba(255, 255, 255, 0.3);
	--blue-gray: rgba(52, 59, 66, 1);
	--black-gray: rgba(0, 0, 0, 0.85);
	background: url("../img/default.jpg") no-repeat center center fixed;
	background-size: cover;
	font-family: neue-haas-grotesk-text, sans-serif;
	color: var(--white);
	margin: 0;
	overflow: hidden;
}

main {
	display: none;
	height: 100vh;
	padding: 20px;
	box-sizing: border-box;
	grid-template-columns: 1fr 3.5fr 1fr;
	grid-template-rows: 1fr 5.5fr 3fr 1fr;
	transition: opacity 0.5s;
}

section {
	transition: opacity 0.5s;
}

input {
	font-size: inherit;
	font-family: inherit;
	color: inherit;
	background: none;
	border: none;
	outline: none;
	border-bottom: 2px white solid;
}

button {
	font-family: inherit;
	outline: none;
	border: none;
	cursor: pointer;
	background-color: transparent;
}

a {
	color: inherit;
	text-decoration: none;
}

.popup {
	background-color: var(--black-gray);
	border-radius: 5px;
	box-sizing: border-box;
	padding: 15px 20px;
}

.popup::after {
	content: "";
	height: 0;
	width: 0;
	border: 10px solid transparent;
	border-top: 10px solid var(--black-gray);
	position: absolute;
	bottom: -20px;
	right: 25px;
}

.menu-toggle {
	position: absolute;
	top: 1.5px;
	width: 22px;
	height: 22px;
	border-radius: 50%;
	color: var(--medium-gray);
	font-size: 72%;
	padding-right: 17px;
	padding-top: 2px;
	opacity: 0;
}

li:hover > .menu-toggle {
	opacity: 1;
}

li .menu-toggle:hover {
	opacity: 1;
	background-color: var(--dark-gray);
	color: var(--light-gray);
}

li .menu-toggle:active {
	background-color: var(--medium-gray);
}

.menu {
	justify-content: flex-end;
	position: absolute;
	background-color: rgb(64, 64, 64);
	border-radius: 5px;
	display: flex;
	flex-direction: column;
	z-index: 5;
}

.menu button {
	width: 70px;
	height: 25px;
	color: inherit;
	font-size: 85%;
}

.menu button:hover {
	background-color: rgb(105, 105, 105);
}

/*---Loading Styling---*/
#loading {
	position: absolute;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	margin: auto;
	font-size: 60px;
	width: 100px;
	height: 100px;
	border-radius: 50%;
	background-color: lightblue;
	display: flex;
	justify-content: center;
	align-items: center;
	opacity: 0;
}

#loading span {
	margin-top: -5px;
	text-align: center;
}

/*-----Web Styling-----*/
#web {
	display: flex;
	height: 30px;
	width: 300px;
}

.focus {
	transition: 0.25s ease all;
	color: var(--light-gray);	
}

.focus:hover {
	color: var(--white);
}

/*-----Links Styling-----*/

.module-button {
	font-size: 1.05em;
	padding: 0;
}

.links {
	margin-right: 15px;
}

.links > div {
	position: absolute;
	top: 60px;
	left: 7px;
	width: 250px;
}

.links .popup {
	position: absolute;
	transform: rotate(180deg);
	width: 100%;
	height: 100%;
	z-index: -1;
}

.links .popup-content {
	display: flex;
	flex-direction: row;
	width: 250px;
	overflow: hidden;
}

.link-list, .link-form {
	min-width: 250px;
	padding: 16px 3px 16px 17px;
	box-sizing: border-box;
	transition: transform 0.3s;
}

.link-list ul {
	list-style: none;
	margin: 0;
	padding: 0;
	max-height: 187.8px;
	overflow: auto;
}

.link-list li {
	position: relative;
}

.link-list .focus {
	padding: 4px 0px;
	font-size: 100%;
	width: 100%;
	text-align: left;
}

.link-list i {
	padding-right: 7px;
}

.add-link {
	color: var(--medium-gray);
}

.link-list .menu-toggle {
	left: 190px;
}

.link-list .menu {
	left: 118px;
}

.link-form {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	justify-content: space-between;
	height: 245px;
	padding: 10px 20px 20px 20px;
}

.link-back {
	border-radius: 50%;
	color: var(--medium-gray);
	width: 25px;
	height: 25px;
	margin-left: -6px;
}

.link-back:hover {
	background-color: var(--dark-gray);
	color: var(--light-gray);
}

.link-form label {
	font-size: 70%;
	width: 100%;
	font-weight: bold;
	color: rgba(255, 255, 255, 0.6);
}

.link-form input {
	width: 100%;
	border-color: var(--medium-gray);
	padding: 6px 0px;
	font-size: 1.3em;
	color: var(--white);
	transition: background-color 0.5s ease-out;
}

.link-form input:hover {
	border-color: rgba(255, 255, 255, 0.6);
}

.link-form input:focus {
	border-color: var(--light-gray);
}

.link-form input:placeholder {
	color: var(--medium-gray);
}

.link-create {
	color: var(--white);
	background-color: var(--dark-gray);
    font-size: 90%;
	border-radius: 20px;
	padding: 8px 25px;
	margin-top: 25px;
}

.link-create:hover {
	background-color: var(--medium-gray);
}

.link-create:active {
	background-color: rgba(255, 255, 255, 0.6);
}
/*-----Search Bar Styling-----*/

.fa-search {
	position: absolute;
	left: 75px;
	font-size: 95%;
	padding-top: 2px;
	z-index: 1;
}

.fa-google {
	position: absolute;
	left: 287px;
	font-size: 86%;
	padding-top: 3px;
	opacity: 0;
	color: var(--white);
}

.search:hover .fa-search {
	color: var(--white);
}

.search input:focus + .fa-search {
	color: var(--white);
}

.search input {
	position: relative;
	opacity: 0;
	width: 180px;
	padding: 0 27px 8px 27px;
	color: var(--white);
	cursor: pointer;
	font-size: 95%;
	z-index: 2;
}

.search:hover input, .search:hover input ~ .fa-google {
	opacity: 0.5;
}

.search input:focus, .search input:focus ~ .fa-google {
	opacity: 1;
}

/*-----Weather Styling-----*/
#weather {
	justify-self: end;
	grid-column: 3;
	display: flex;
	justify-content: flex-start;
	align-items: flex-end;
	flex-direction: column;
	margin-top: -7.5px;
}

#weather i {
	font-size: 0.9em;
	margin-right: 4px;
}

.temp-container {
	display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: row;
	cursor: pointer;
	font-size: 1.65em;
}

.temp-container .tooltip {
	top: 33px;
	right: 6px;
}

.city-container {
	display: flex;
	align-items: flex-start;
	cursor: pointer;
	font-size: 0.83em;
	color: var(--light-gray);
}

.city-container .tooltip {
	top: 55px;
	right: 0px;
}
/* ... */

